[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/res/weapon/icons/pistol_icon.tres" type="Texture" id=1]
[ext_resource path="res://assets/res/ui/fueltank/fueltank_background.tres" type="Texture" id=3]
[ext_resource path="res://assets/res/ui/lootbag/lootbag_icon.tres" type="Texture" id=4]
[ext_resource path="res://scenes/UI/HUD/HUD.gd" type="Script" id=6]
[ext_resource path="res://assets/res/ui/fueltank/fueltank_fill.tres" type="Texture" id=7]
[ext_resource path="res://assets/res/ui/healthbar/portrait.tres" type="Texture" id=8]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="CharStats" type="MarginContainer" parent="."]
anchor_right = 0.303125
anchor_bottom = 0.266667
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="CharStats"]
margin_left = 4.0
margin_top = 4.0
margin_right = 93.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 40 )

[node name="CenterContainer" type="CenterContainer" parent="CharStats/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
size_flags_vertical = 0

[node name="Healthbar" type="TextureRect" parent="CharStats/HBoxContainer/CenterContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 24 )
texture = ExtResource( 8 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CharStats/HBoxContainer"]
margin_left = 36.0
margin_right = 89.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0

[node name="LootBag" type="MarginContainer" parent="CharStats/HBoxContainer/VBoxContainer"]
margin_right = 53.0
margin_bottom = 19.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="CharStats/HBoxContainer/VBoxContainer/LootBag"]
margin_right = 53.0
margin_bottom = 19.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CharStats/HBoxContainer/VBoxContainer/LootBag/HBoxContainer"]
margin_right = 16.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 8, 10 )
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 4 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CharStats/HBoxContainer/VBoxContainer/LootBag/HBoxContainer"]
margin_left = 20.0
margin_right = 53.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "x 200"
align = 1
valign = 1

[node name="Gun" type="MarginContainer" parent="CharStats/HBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 53.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CharStats/HBoxContainer/VBoxContainer/Gun"]
margin_right = 53.0
margin_bottom = 17.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CharStats/HBoxContainer/VBoxContainer/Gun/VBoxContainer"]
margin_right = 53.0
margin_bottom = 17.0

[node name="TextureRect" type="TextureRect" parent="CharStats/HBoxContainer/VBoxContainer/Gun/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 17.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Label" type="Label" parent="CharStats/HBoxContainer/VBoxContainer/Gun/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_right = 53.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "x 5"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GasTank" type="MarginContainer" parent="."]
anchor_left = 0.828125
anchor_top = 0.838889
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ProgressBar" type="TextureProgress" parent="GasTank"]
margin_left = 4.0
margin_top = 4.0
margin_right = 51.0
margin_bottom = 25.0
mouse_filter = 2
rounded = true
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 7 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GasTank"]
margin_left = 4.0
margin_top = 4.0
margin_right = 51.0
margin_bottom = 25.0
size_flags_horizontal = 7
size_flags_vertical = 7
text = "100%"
align = 1
valign = 2

[node name="Tween" type="Tween" parent="."]
